complete tutorial wih input binding and event binding
See: https://welearncode.com/beginners-guide-react-2020/

--- a/angular.json
+++ b/angular.json
@@ -124,5 +124,8 @@
       }
     }
   },
-  "defaultProject": "color-switcher"
+  "defaultProject": "color-switcher",
+  "cli": {
+    "analytics": false
+  }
 }
